# foodgram

./: Dockerfile  DockerfileBackend  README.md  requirements.txt
api/: __init__.py  apps.py  urls.py
api/recipes/: __init__.py  filters.py  pagination.py  serializers.py  urls.py  views.py
api/users/: __init__.py  serializers.py  urls.py  views.py
backend/: Dockerfile  README.md  __init__.py  foodgram  pyproject.toml  requirements.txt
backend/api/: urls.py
backend/api/recipes/: permissions.py  serializers.py  short_serializers.py  urls.py  views.py
backend/api/users/: serializers.py  views.py
backend/infra/: nginx.conf
backend/postman_collection/: foodgram.postman_collection.json
backend/project_root/: settings.py  urls.py
backend/recieps/: admin.py  apps.py  fields.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
backend/recieps/management/commands/: import_ingredients.py
backend/recipes/: admin.py  fields.py
backend/recipes/management/commands/: import_ingredients.py
backend/users/: admin.py  auth_backends.py  models.py
backend/users/migrations/: 0001_initial.py  0002_user_avatar.py
infra/: docker-compose.yml  nginx.conf
project_root/: asgi.py  settings.py  urls.py  wsgi.py
recieps/: admin.py  apps.py  models.py  pagination.py  serializers.py  views.py
recieps/migrations/: 0001_initial.py  0002_user_avatar.py
recipes/: admin.py  apps.py  fields.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/: __init__.py  admin.py  apps.py  models.py
(+6 files in other folders)
